<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

    <TextView
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
            android:textSize="@dimen/fontSize"
            android:textColorHint="@color/colorTransparent"
            android:hint="@string/meters"
            android:textColor="@color/fontColor"
            android:id="@+id/height_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_text_view"
    />

    <TextView
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/weight_text_view"
            android:text="@string/enter_your_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_edit_text"
    />

    <EditText
            android:textSize="@dimen/fontSize"
            android:textColorHint="@color/colorTransparent"
            android:hint="@string/kilograms"
            android:textColor="@color/fontColor"
            android:id="@+id/weight_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_text_view"
    />

    <Button
            android:padding="@dimen/buttonPadding"
            android:textAllCaps="false"
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/calculate_button"
            android:text="@string/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_edit_text"
    />

    <ImageView
            android:id="@+id/body_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            android:layout_marginLeft="10dp"
    />

    <TextView
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
    />

    <TextView
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/category_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/result_text_view"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
    />

    <TextView
            android:textSize="@dimen/fontSize"
            android:textColor="@color/fontColor"
            android:id="@+id/summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_text_view"
            android:layout_marginRight="10dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>